objects/ssot__SalesOrderProductPriceAdjustment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdjustmentAmount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AdjustmentTaxAmount__c</fullName>
        <label>Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Product Price Adjustment Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceAdjustmentGroupId__c</fullName>
        <label>Price Adjustment Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriceAdjustmentTier__c</fullName>
        <label>Price Adjustment Tier</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderPriceAdjustmentId__c</fullName>
        <label>Sales Order Price Adjustment Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProdtPriceAdjType__c</fullName>
        <label>Sales Order Prodt Price Adj Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductId__c</fullName>
        <label>Sales Order Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderProductPriceAdjAmt__c</fullName>
        <label>Sales Order Product Price Adj Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218070_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductPriceAdjustment_Pri_rel</label>
        <referenceTo>ssot__PriceAdjustmentGroup__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductPriceAdjustment_Pri_rel</relationshipLabel>
        <relationshipName>rel_1697761218070_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761218157_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductPriceAdjustment_Sal_rel</label>
        <referenceTo>ssot__SalesOrderPriceAdjustment__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductPriceAdjustment_Sal_rel</relationshipLabel>
        <relationshipName>rel_1697761218157_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761220772_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderProductPriceAdjustment_Sal_rel</label>
        <referenceTo>ssot__SalesOrderProduct__dlm</referenceTo>
        <relationshipLabel>SalesOrderProductPriceAdjustment_Sal_rel</relationshipLabel>
        <relationshipName>rel_1697761220772_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>